--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,10 @@
       });
     </script>
     <script>
-      window.addEventListener('DOMContentLoaded', () => {
+     window.addEventListener('DOMContentLoaded', () => {
         let url = new URL(window.location);
-        let path = (url.pathname.slice(1, -5))
+        let last = url.pathname.lastIndexOf('/');
+        let path = (url.pathname.slice(last, -5))
         let item = document.querySelector(`#${path}`);
         console.log(item)
         item.querySelector('.active').style.display = 'flex';
