--- a/work.html
+++ b/work.html
@@ -119,7 +119,8 @@
 <script>
   window.addEventListener('DOMContentLoaded', () => {
     let url = new URL(window.location);
-    let path = (url.pathname.slice(1, -5))
+    let last = url.pathname.lastIndexOf('/');
+    let path = (url.pathname.slice(last, -5))
     let item = document.querySelector(`#${path}`);
     console.log(item)
     item.querySelector('.active').style.display = 'flex';
