--- a/work.html
+++ b/work.html
@@ -14,7 +14,74 @@
 </head>
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <style>
- 
+  .main-work {
+    padding: 100px 0;
+  }
+  .main-contain-work {
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: relative;
+    padding-bottom: 50px;
+  }
+  .contain-work {
+    position: relative;
+  }
+  ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    gap: 50px;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 25%;
+  }
+
+  .card {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: center;
+    height: auto;
+    background: transparent;
+    border: none;
+  }
+
+  .card__image {
+    height: 200px;
+    width: 100%;
+    background-color:transparent;
+    backdrop-filter: blur(20px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+  }
+
+  .image { 
+    height: 100%;
+    width: 100%;
+    background-position: center  !important;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+  }
+  p {
+    font-size: 18px;
+    color:  white;
+  }
 </style>
 
 <body class="main-work">
