--- a/about.html
+++ b/about.html
@@ -190,7 +190,7 @@
       document.body.classList.add("animate-out");
     });
   </script>
- <address>
+ <script>
   window.addEventListener('DOMContentLoaded', () => {
     let url = new URL(window.location);
     let last = url.pathname.lastIndexOf('/');
