--- a/work.html
+++ b/work.html
@@ -24,7 +24,6 @@
     justify-content: flex-start;
     align-items: flex-start;
     position: relative;
-    padding-bottom: 50px;
   }
   .contain-work {
     position: relative;
@@ -60,8 +59,8 @@
   }
 
   .card__image {
-    height: 200px;
-    width: 100%;
+    height: 250px;
+    width: 250px;
     background-color:transparent;
     backdrop-filter: blur(20px);
     display: flex;
@@ -69,6 +68,8 @@
     align-items: center;
     justify-content: center;
     padding: 30px;
+    border: 1px solid white;
+    border-radius: 20px;
   }
 
   .image { 
@@ -86,25 +87,25 @@
 
 <body class="main-work">
   <div class="main-work-contain container">
+    <div class="decor-top">
+      <span class="line"></span>
+      <span class="icon-star"></span>
+    </div>
+    <div class="decor-bottom">
+      <span class="icon-star"></span>
+      <span class="icon-star big"></span>
+      <span class="icon-star"></span>
+    </div>
+    <div class="decor-bottom-left">
+      <div class="contain">
+        <span class="icon-star star-1"></span>
+        <span class="line"></span>
+        <span class="icon-star big"></span>
+      </div>
+      <span class="icon-star star-2"></span>
+    </div>
     <div class="contain-work">
 
-      <div class="decor-top">
-        <span class="line"></span>
-        <span class="icon-star"></span>
-      </div>
-      <div class="decor-bottom">
-        <span class="icon-star"></span>
-        <span class="icon-star big"></span>
-        <span class="icon-star"></span>
-      </div>
-      <div class="decor-bottom-left">
-        <div class="contain">
-          <span class="icon-star star-1"></span>
-          <span class="line"></span>
-          <span class="icon-star big"></span>
-        </div>
-        <span class="icon-star star-2"></span>
-      </div>
     <div class="row justify-content-center">
       <div class="row  menu">
         <a id="home" class="menu-item home" href="./index.html" style="background: url(./icon/Home\ Button@300x.png);">
