--- a/about.html
+++ b/about.html
@@ -112,22 +112,24 @@
 </style>
 
 <body class="main-about">
-  <div class="decor-top">
-    <span class="line"></span>
-    <span class="icon-star"></span>
-  </div>
-  <div class="decor-bottom">
-    <span class="icon-star"></span>
-    <span class="icon-star big"></span>
-    <span class="icon-star"></span>
-  </div>
-  <div class="decor-bottom-left">
-    <div class="contain">
-      <span class="icon-star star-1"></span>
+  <div class="contain-star">
+    <div class="decor-top">
       <span class="line"></span>
-      <span class="icon-star big"></span>
+      <span class="icon-star"></span>
     </div>
-    <span class="icon-star star-2"></span>
+    <div class="decor-bottom">
+      <span class="icon-star"></span>
+      <span class="icon-star big"></span>
+      <span class="icon-star"></span>
+    </div>
+    <div class="decor-bottom-left">
+      <div class="contain">
+        <span class="icon-star star-1"></span>
+        <span class="line"></span>
+        <span class="icon-star big"></span>
+      </div>
+      <span class="icon-star star-2"></span>
+    </div>
   </div>
   <div class="main-about-contain container">
     <div class="about-wrapper">
