--- a/contact.html
+++ b/contact.html
@@ -119,22 +119,24 @@
             <div class="social-icon"><i class="fa fa-envelope" aria-hidden="true"></i></div>
           </div>
         </div>
-        <div class="decor-top">
-          <span class="line"></span>
-          <span class="icon-star"></span>
-        </div>
-        <div class="decor-bottom">
-          <span class="icon-star"></span>
-          <span class="icon-star big"></span>
-          <span class="icon-star"></span>
-        </div>
-        <div class="decor-bottom-left">
-          <div class="contain">
-            <span class="icon-star star-1"></span>
+        <div class="contain-star">
+          <div class="decor-top">
             <span class="line"></span>
-            <span class="icon-star big"></span>
+            <span class="icon-star"></span>
           </div>
-          <span class="icon-star star-2"></span>
+          <div class="decor-bottom">
+            <span class="icon-star"></span>
+            <span class="icon-star big"></span>
+            <span class="icon-star"></span>
+          </div>
+          <div class="decor-bottom-left">
+            <div class="contain">
+              <span class="icon-star star-1"></span>
+              <span class="line"></span>
+              <span class="icon-star big"></span>
+            </div>
+            <span class="icon-star star-2"></span>
+          </div>
         </div>
     <script>
       window.addEventListener("load", function () {
