--- a/work.html
+++ b/work.html
@@ -86,7 +86,7 @@
 </style>
 
 <body class="main-work">
-  <div class="main-work-contain container">
+  <div class="contain-star">
     <div class="decor-top">
       <span class="line"></span>
       <span class="icon-star"></span>
@@ -104,8 +104,8 @@
       </div>
       <span class="icon-star star-2"></span>
     </div>
-    <div class="contain-work">
-
+  </div>
+  <div class="main-work-contain container"> 
     <div class="row justify-content-center">
       <div class="row  menu">
         <a id="home" class="menu-item home" href="./index.html" style="background: url(./icon/Home\ Button@300x.png);">
@@ -125,6 +125,7 @@
       </div>
     </div>
     <div class="main-contain-work row">
+      <div class="contain-work">
       <ul>
         <li>
           <div data-aos="flip-down" class="card ">
